fix double scrollbar on home page

--- a/styles/global.css
+++ b/styles/global.css
@@ -13,4 +13,7 @@ header.dark {
 html, body, #__next {
   height: 100%;
   width: 100%;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
 }
